--- a/about.html
+++ b/about.html
@@ -1,94 +1,86 @@
-{\rtf1\ansi\ansicpg1252\cocoartf2822
-\cocoatextscaling0\cocoaplatform0{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
-{\colortbl;\red255\green255\blue255;}
-{\*\expandedcolortbl;;}
-\paperw11900\paperh16840\margl1440\margr1440\vieww11520\viewh8400\viewkind0
-\pard\tx720\tx1440\tx2160\tx2880\tx3600\tx4320\tx5040\tx5760\tx6480\tx7200\tx7920\tx8640\pardirnatural\partightenfactor0
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Felipe O. Cerezer - About</title>
+    
+    <!-- Link to Font Awesome CDN for Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
-\f0\fs24 \cf0 <!DOCTYPE html>\
-<html lang="en">\
-<head>\
-    <meta charset="UTF-8">\
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">\
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">\
-    <title>Felipe O. Cerezer - About</title>\
-    \
-    <!-- Link to Font Awesome CDN for Icons -->\
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">\
-\
-    <link rel="stylesheet" href="style.css">\
-</head>\
-<body>\
-\
-    <!-- Header Navigation -->\
-    <header>\
-        <nav>\
-            <a href="index.html">Home</a>\
-            <a href="projects.html">Projects</a>\
-            <a href="about.html">About</a>\
-            <a href="publications.html">Publications</a>\
-        </nav>\
-    </header>\
-\
-    <!-- Main Content Section (About Me Section) -->\
-    <section class="about-section">\
-        <h1>About Me!</h1>\
-\
-        <p>Since high school, I've known I wanted to be a biologist. My passion for ecology and the complex mechanisms of nature was ignited during my bachelor\'92s studies. Originally from <a href="https://pt.wikipedia.org/wiki/Ivor%C3%A1" target="_blank">Ivor\'e1</a>, a charming countryside town nestled between the Atlantic Forest and the Pampa grasslands in southern Brazil, my roots have deeply influenced my love for the natural world. I pursued my undergraduate and graduate studies in Santa Maria, Rio Grande do Sul, Brazil, where my academic journey started. </p>\
-\
-        <p>When I'm not immersed in research, I enjoy being outdoors. I like playing football, volleyball, paddleboarding, and hiking. These activities keep me active and deepen my appreciation for the environment.</p>\
-\
-        <!-- Nature Images -->\
-        <div class="nature-images">\
-            <img src="pic1.jpeg" alt="Nature Photo 1">\
-            <img src="pic2.jpeg" alt="Nature Photo 2">\
-            <img src="pic3.jpeg" alt="Nature Photo 3">\
-            <img src="pic4.jpeg" alt="Nature Photo 4">\
-            <img src="pic5.jpeg" alt="Nature Photo 5">\
-        </div>\
-\
-        <h2>Professional Experience</h2>\
-        <div class="experience">\
-            <h3>2024 - Present <i class="fas fa-briefcase"></i></h3>\
-            <p><strong>Postdoctoral Fellow Researcher</strong><br>\
-            <i class="fas fa-building"></i> Czech Academy of Sciences, Czech Republic<br>\
-            <i class="fas fa-flask"></i> Researcher at the project STANDARD \'96 Diversity dynamics across scales (PI Antonin Machac)</p>\
-\
-            <h3>2023 - Present <i class="fas fa-briefcase"></i></h3>\
-            <p><strong>Postdoctoral Fellow Researcher</strong><br>\
-            <i class="fas fa-building"></i> Charles University, Czech Republic<br>\
-            <i class="fas fa-flask"></i> Researcher at the project EXPRO \'96 The equilibrium theory of biodiversity dynamics \'96 macroecological perspective (PI David Storch)</p>\
-\
-            <h3>2021 - 2022 <i class="fas fa-briefcase"></i></h3>\
-            <p><strong>Visiting PhD Student</strong><br>\
-            <i class="fas fa-building"></i> Swiss Federal Research Institute for Forest, Snow and Landscape (WSL), Switzerland<br>\
-            <i class="fas fa-flask"></i> Research theme: Accelerated body size evolution in upland environments drives recent speciation in South American freshwater fishes</p>\
-\
-            <h3>2017 - 2023 <i class="fas fa-briefcase"></i></h3>\
-            <p><strong>Postgraduate Student Researcher</strong><br>\
-            <i class="fas fa-building"></i> Federal University of Santa Maria, Brazil<br>\
-            <i class="fas fa-flask"></i> <span>Performed research related to my MSc and PhD studies (see details below)</span></p>\
-        </div>\
-\
-        <h2>Education</h2>\
-        <div class="education">\
-            <h3>PhD - Animal Biodiversity</h3>\
-            <p><strong>2019 - 2023</strong><br>\
-            <i class="fas fa-university"></i> Federal University of Santa Maria, Brazil<br>\
-            <i class="fas fa-flask"></i> PhD theme: The role of evolutionary and ecological processes in species diversity and coloration patterns (PI Cristian Dambros)</p>\
-\
-            <h3>MSc - Animal Biodiversity</h3>\
-            <p><strong>2017 - 2019</strong><br>\
-            <i class="fas fa-university"></i> Federal University of Santa Maria, Brazil<br>\
-            <i class="fas fa-flask"></i> MSc theme: Effects of productivity on speciation-extinction dynamics drive the latitudinal diversity gradient of South American small mammals (PI Cristian Dambros)</p>\
-\
-            <h3>BSc - Biological Sciences</h3>\
-            <p><strong>2013 - 2017</strong><br>\
-            <i class="fas fa-university"></i> Federal University of Santa Maria, Brazil<br>\
-            <i class="fas fa-flask"></i> BSc theme: Adaptive evolution of facial coloration patterns in didelphid marsupials (PI Nilton C\'e1ceres)</p>\
-        </div>\
-    </section>\
-\
-</body>\
-</html>\
-}
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+    <!-- Header Navigation -->
+    <header>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="projects.html">Projects</a>
+            <a href="about.html">About</a>
+            <a href="publications.html">Publications</a>
+        </nav>
+    </header>
+
+    <!-- Main Content Section (About Me Section) -->
+    <section class="about-section">
+        <h1>About Me!</h1>
+
+        <p>Since high school, I've known I wanted to be a biologist. My passion for ecology and the complex mechanisms of nature was ignited during my bachelor’s studies. Originally from <a href="https://pt.wikipedia.org/wiki/Ivor%C3%A1" target="_blank">Ivorá</a>, a charming countryside town nestled between the Atlantic Forest and the Pampa grasslands in southern Brazil, my roots have deeply influenced my love for the natural world. I pursued my undergraduate and graduate studies in Santa Maria, Rio Grande do Sul, Brazil, where my academic journey started. </p>
+
+        <p>When I'm not immersed in research, I enjoy being outdoors. I like playing football, volleyball, paddleboarding, and hiking. These activities keep me active and deepen my appreciation for the environment.</p>
+
+        <!-- Nature Images -->
+        <div class="nature-images">
+            <img src="pic1.jpeg" alt="Nature Photo 1">
+            <img src="pic2.jpeg" alt="Nature Photo 2">
+            <img src="pic3.jpeg" alt="Nature Photo 3">
+            <img src="pic4.jpeg" alt="Nature Photo 4">
+            <img src="pic5.jpeg" alt="Nature Photo 5">
+        </div>
+
+        <h2>Professional Experience</h2>
+        <div class="experience">
+            <h3>2024 - Present <i class="fas fa-briefcase"></i></h3>
+            <p><strong>Postdoctoral Fellow Researcher</strong><br>
+            <i class="fas fa-building"></i> Czech Academy of Sciences, Czech Republic<br>
+            <i class="fas fa-flask"></i> Researcher at the project STANDARD – Diversity dynamics across scales (PI Antonin Machac)</p>
+
+            <h3>2023 - Present <i class="fas fa-briefcase"></i></h3>
+            <p><strong>Postdoctoral Fellow Researcher</strong><br>
+            <i class="fas fa-building"></i> Charles University, Czech Republic<br>
+            <i class="fas fa-flask"></i> Researcher at the project EXPRO – The equilibrium theory of biodiversity dynamics – macroecological perspective (PI David Storch)</p>
+
+            <h3>2021 - 2022 <i class="fas fa-briefcase"></i></h3>
+            <p><strong>Visiting PhD Student</strong><br>
+            <i class="fas fa-building"></i> Swiss Federal Research Institute for Forest, Snow and Landscape (WSL), Switzerland<br>
+            <i class="fas fa-flask"></i> Research theme: Accelerated body size evolution in upland environments drives recent speciation in South American freshwater fishes</p>
+
+            <h3>2017 - 2023 <i class="fas fa-briefcase"></i></h3>
+            <p><strong>Postgraduate Student Researcher</strong><br>
+            <i class="fas fa-building"></i> Federal University of Santa Maria, Brazil<br>
+            <i class="fas fa-flask"></i> <span>Performed research related to my MSc and PhD studies (see details below)</span></p>
+        </div>
+
+        <h2>Education</h2>
+        <div class="education">
+            <h3>PhD - Animal Biodiversity</h3>
+            <p><strong>2019 - 2023</strong><br>
+            <i class="fas fa-university"></i> Federal University of Santa Maria, Brazil<br>
+            <i class="fas fa-flask"></i> PhD theme: The role of evolutionary and ecological processes in species diversity and coloration patterns (PI Cristian Dambros)</p>
+
+            <h3>MSc - Animal Biodiversity</h3>
+            <p><strong>2017 - 2019</strong><br>
+            <i class="fas fa-university"></i> Federal University of Santa Maria, Brazil<br>
+            <i class="fas fa-flask"></i> MSc theme: Effects of productivity on speciation-extinction dynamics drive the latitudinal diversity gradient of South American small mammals (PI Cristian Dambros)</p>
+
+            <h3>BSc - Biological Sciences</h3>
+            <p><strong>2013 - 2017</strong><br>
+            <i class="fas fa-university"></i> Federal University of Santa Maria, Brazil<br>
+            <i class="fas fa-flask"></i> BSc theme: Adaptive evolution of facial coloration patterns in didelphid marsupials (PI Nilton Cáceres)</p>
+        </div>
+    </section>
+
+</body>
+</html>
