--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="Felipe O. Cerezer - Macroecologist, Evolutionary Biologist, and Biogeographer. Explore my research and publications.">
     <title>Felipe O. Cerezer - Home</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -20,25 +21,40 @@
     </header>
 
     <!-- Main Content Section (Profile Section) -->
-    <section class="profile-section">
-        <img src="profile_pic.jpeg" alt="Felipe O. Cerezer" class="profile-img">
-        <h1>Felipe O. Cerezer</h1>
-        <h3>Researcher in Macroecology, Evolutionary Biology & Biogeography</h3>
+    <main>
+        <section class="profile-section">
+            <div class="profile-container">
+                <!-- Profile Image -->
+                <img src="profile_pic.jpeg" alt="Profile picture of Felipe O. Cerezer" class="profile-img">
 
-        <p>Welcome!<br><br>
-        I am a Brazilian scientist passionate about understanding the diversity of life on Earth. My research in macroecology, evolutionary biology, and biogeography uncovers the amazing patterns and processes that sculpt biodiversity among clades, regions, and time. Join me as I explore how life evolves, adapts, and thrives in our ever-changing world!</p>
+                <!-- Text Content -->
+                <div class="profile-text">
+                    <h1>Felipe O. Cerezer</h1>
+                    <h3>Researcher in Macroecology, Evolutionary Biology & Biogeography</h3>
 
-        <div class="social-icons">
-            <a href="https://scholar.google.com/citations?user=wUiHfVoAAAAJ&hl=pt-BR" target="_blank" title="Google Scholar"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/Google_Scholar_Logo.svg/1200px-Google_Scholar_Logo.svg.png" alt="Google Scholar" style="width: 40px; height: 40px;"></a>
-            <a href="https://www.researchgate.net/profile/Felipe-Cerezer?ev=hdr_xprf" target="_blank" title="ResearchGate"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a6/ResearchGate_logo_2016.svg" alt="ResearchGate" style="width: 40px; height: 40px;"></a>
-            <a href="https://bsky.app/profile/cerezer.bsky.social" target="_blank" title="Bluesky"><img src="https://upload.wikimedia.org/wikipedia/commons/9/9b/Bluesky_logo.svg" alt="Bluesky" style="width: 40px; height: 40px;"></a>
-        </div>
+                    <p>Welcome!<br><br>
+                    I am a Brazilian scientist passionate about understanding the diversity of life on Earth. My research in macroecology, evolutionary biology, and biogeography uncovers the amazing patterns and processes that sculpt biodiversity among clades, regions, and time. Join me as I explore how life evolves, adapts, and thrives in our ever-changing world!</p>
 
-        <div class="footer-links">
-            <a href="mailto:cerezerfelipe@gmail.com" target="_blank" title="Email me">Feel free to reach out via email</a><br>
-            <a href="cv.pdf" target="_blank" title="Download CV">Download my CV (PDF)</a>
-        </div>
-    </section>
+                    <div class="social-icons">
+                        <a href="https://scholar.google.com/citations?user=wUiHfVoAAAAJ&hl=pt-BR" target="_blank" title="Google Scholar" aria-label="Google Scholar">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/Google_Scholar_Logo.svg/1200px-Google_Scholar_Logo.svg.png" alt="Google Scholar" style="width: 40px; height: 40px;">
+                        </a>
+                        <a href="https://www.researchgate.net/profile/Felipe-Cerezer?ev=hdr_xprf" target="_blank" title="ResearchGate" aria-label="ResearchGate">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/a/a6/ResearchGate_logo_2016.svg" alt="ResearchGate" style="width: 40px; height: 40px;">
+                        </a>
+                        <a href="https://bsky.app/profile/cerezer.bsky.social" target="_blank" title="Bluesky" aria-label="Bluesky">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/9/9b/Bluesky_logo.svg" alt="Bluesky" style="width: 40px; height: 40px;">
+                        </a>
+                    </div>
+
+                    <div class="footer-links">
+                        <a href="mailto:cerezerfelipe@gmail.com" target="_blank" title="Email Felipe O. Cerezer" aria-label="Email Felipe O. Cerezer">Feel free to reach out via email</a><br>
+                        <a href="cv.pdf" target="_blank" title="Download CV" aria-label="Download CV">Download my CV (PDF)</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 
 </body>
 </html>
