--- a/index.html
+++ b/index.html
@@ -30,20 +30,20 @@
                 <!-- Text Content -->
                 <div class="profile-text">
                     <h1>Felipe O. Cerezer</h1>
-                    <h3>Researcher in Macroecology, Evolutionary Biology & Biogeography</h3>
+                    <h3>Macroecology, Evolutionary Biology & Biogeography</h3>
 
                     <p>Welcome!<br><br>
                     I am a Brazilian scientist passionate about understanding the diversity of life on Earth. My research in macroecology, evolutionary biology, and biogeography uncovers the amazing patterns and processes that sculpt biodiversity among clades, regions, and time. Join me as I explore how life evolves, adapts, and thrives in our ever-changing world!</p>
 
                     <div class="social-icons">
                         <a href="https://scholar.google.com/citations?user=wUiHfVoAAAAJ&hl=pt-BR" target="_blank" title="Google Scholar" aria-label="Google Scholar">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/Google_Scholar_Logo.svg/1200px-Google_Scholar_Logo.svg.png" alt="Google Scholar" style="width: 40px; height: 40px;">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/e/ed/Graduation_cap_icon.svg" alt="Google Scholar" style="width: 40px; height: 40px;">
                         </a>
                         <a href="https://www.researchgate.net/profile/Felipe-Cerezer?ev=hdr_xprf" target="_blank" title="ResearchGate" aria-label="ResearchGate">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/a/a6/ResearchGate_logo_2016.svg" alt="ResearchGate" style="width: 40px; height: 40px;">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/1/1e/ResearchGate_Logo.svg" alt="ResearchGate" style="width: 40px; height: 40px;">
                         </a>
                         <a href="https://bsky.app/profile/cerezer.bsky.social" target="_blank" title="Bluesky" aria-label="Bluesky">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/9/9b/Bluesky_logo.svg" alt="Bluesky" style="width: 40px; height: 40px;">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/a/a7/Bluesky_logo_2023.svg" alt="Bluesky" style="width: 40px; height: 40px;">
                         </a>
                     </div>
 
