--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="Felipe O. Cerezer - Macroecologist, Evolutionary Biologist, and Biogeographer. Explore my research and publications.">
     <title>Felipe O. Cerezer - Home</title>
     <link rel="stylesheet" href="style.css">
+    <!-- Font Awesome CDN for icons -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
 
@@ -21,40 +22,32 @@
     </header>
 
     <!-- Main Content Section (Profile Section) -->
-    <main>
-        <section class="profile-section">
-            <div class="profile-container">
-                <!-- Profile Image -->
-                <img src="profile_pic.jpeg" alt="Profile picture of Felipe O. Cerezer" class="profile-img">
+    <section class="profile-section">
+        <img src="profile_pic.jpeg" alt="Felipe O. Cerezer" class="profile-img">
+        <div class="profile-text">
+            <h1>Felipe O. Cerezer</h1>
+            <h3>Macroecology, Evolutionary Biology & Biogeography</h3>
+            <p>Welcome!<br><br>
+            I am a Brazilian scientist passionate about understanding the diversity of life on Earth. My research in macroecology, evolutionary biology, and biogeography uncovers the amazing patterns and processes that sculpt biodiversity among clades, regions, and time. Join me as I explore how life evolves, adapts, and thrives in our ever-changing world!</p>
+        </div>
 
-                <!-- Text Content -->
-                <div class="profile-text">
-                    <h1>Felipe O. Cerezer</h1>
-                    <h3>Macroecology, Evolutionary Biology & Biogeography</h3>
+        <div class="social-icons">
+            <a href="https://scholar.google.com/citations?user=wUiHfVoAAAAJ&hl=pt-BR" target="_blank" title="Google Scholar">
+                <i class="fab fa-google"></i> <!-- Google Scholar icon -->
+            </a>
+            <a href="https://www.researchgate.net/profile/Felipe-Cerezer?ev=hdr_xprf" target="_blank" title="ResearchGate">
+                <i class="fab fa-researchgate"></i> <!-- ResearchGate icon -->
+            </a>
+            <a href="https://bsky.app/profile/cerezer.bsky.social" target="_blank" title="Bluesky">
+                <i class="fab fa-twitter"></i> <!-- Bluesky (uses Twitter icon) -->
+            </a>
+        </div>
 
-                    <p>Welcome!<br><br>
-                    I am a Brazilian scientist passionate about understanding the diversity of life on Earth. My research in macroecology, evolutionary biology, and biogeography uncovers the amazing patterns and processes that sculpt biodiversity among clades, regions, and time. Join me as I explore how life evolves, adapts, and thrives in our ever-changing world!</p>
-
-                    <div class="social-icons">
-                        <a href="https://scholar.google.com/citations?user=wUiHfVoAAAAJ&hl=pt-BR" target="_blank" title="Google Scholar" aria-label="Google Scholar">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/e/ed/Graduation_cap_icon.svg" alt="Google Scholar" style="width: 40px; height: 40px;">
-                        </a>
-                        <a href="https://www.researchgate.net/profile/Felipe-Cerezer?ev=hdr_xprf" target="_blank" title="ResearchGate" aria-label="ResearchGate">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/1/1e/ResearchGate_Logo.svg" alt="ResearchGate" style="width: 40px; height: 40px;">
-                        </a>
-                        <a href="https://bsky.app/profile/cerezer.bsky.social" target="_blank" title="Bluesky" aria-label="Bluesky">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/a/a7/Bluesky_logo_2023.svg" alt="Bluesky" style="width: 40px; height: 40px;">
-                        </a>
-                    </div>
-
-                    <div class="footer-links">
-                        <a href="mailto:cerezerfelipe@gmail.com" target="_blank" title="Email Felipe O. Cerezer" aria-label="Email Felipe O. Cerezer">Feel free to reach out via email</a><br>
-                        <a href="cv.pdf" target="_blank" title="Download CV" aria-label="Download CV">Download my CV (PDF)</a>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </main>
+        <div class="footer-links">
+            <a href="mailto:cerezerfelipe@gmail.com" target="_blank" title="Email me">Feel free to reach out via email</a><br>
+            <a href="cv.pdf" target="_blank" title="Download CV">Download my CV (PDF)</a>
+        </div>
+    </section>
 
 </body>
 </html>
