--- a/index.html
+++ b/index.html
@@ -23,26 +23,33 @@
 
     <!-- Main Content Section (Profile Section) -->
     <section class="profile-section">
-        <img src="profile_pic.jpeg" alt="Felipe O. Cerezer" class="profile-img">
-        <div class="profile-text">
-            <h1>Felipe O. Cerezer</h1>
-            <h3>Macroecology, Evolutionary Biology & Biogeography</h3>
-            <p>Welcome!<br><br>
-            I am a Brazilian scientist passionate about understanding the diversity of life on Earth. My research in macroecology, evolutionary biology, and biogeography uncovers the amazing patterns and processes that sculpt biodiversity among clades, regions, and time. Join me as I explore how life evolves, adapts, and thrives in our ever-changing world!</p>
+        <div class="profile-container">
+            <!-- Profile Image -->
+            <img src="profile_pic.jpeg" alt="Felipe O. Cerezer" class="profile-img">
+            
+            <!-- Profile Text -->
+            <div class="profile-text">
+                <h1>Felipe O. Cerezer</h1>
+                <h3>Macroecology, Evolutionary Biology & Biogeography</h3>
+                <p>Welcome!<br><br>
+                I am a Brazilian scientist passionate about understanding the diversity of life on Earth. My research in macroecology, evolutionary biology, and biogeography uncovers the amazing patterns and processes that sculpt biodiversity among clades, regions, and time. Join me as I explore how life evolves, adapts, and thrives in our ever-changing world!</p>
+            </div>
         </div>
 
+        <!-- Social Icons -->
         <div class="social-icons">
             <a href="https://scholar.google.com/citations?user=wUiHfVoAAAAJ&hl=pt-BR" target="_blank" title="Google Scholar">
-                <i class="fab fa-google"></i> <!-- Google Scholar icon -->
+                <i class="fab fa-google"></i>
             </a>
             <a href="https://www.researchgate.net/profile/Felipe-Cerezer?ev=hdr_xprf" target="_blank" title="ResearchGate">
-                <i class="fab fa-researchgate"></i> <!-- ResearchGate icon -->
+                <i class="fab fa-researchgate"></i>
             </a>
             <a href="https://bsky.app/profile/cerezer.bsky.social" target="_blank" title="Bluesky">
-                <i class="fab fa-twitter"></i> <!-- Bluesky (uses Twitter icon) -->
+                <i class="fab fa-twitter"></i>
             </a>
         </div>
 
+        <!-- Footer Links -->
         <div class="footer-links">
             <a href="mailto:cerezerfelipe@gmail.com" target="_blank" title="Email me">Feel free to reach out via email</a><br>
             <a href="cv.pdf" target="_blank" title="Download CV">Download my CV (PDF)</a>
