--- a/index.html
+++ b/index.html
@@ -36,23 +36,25 @@
             </div>
         </div>
 
-        <!-- Social Icons -->
-        <div class="social-icons">
-            <a href="https://scholar.google.com/citations?user=wUiHfVoAAAAJ&hl=pt-BR" target="_blank" title="Google Scholar">
-                <i class="fab fa-google"></i>
-            </a>
-            <a href="https://www.researchgate.net/profile/Felipe-Cerezer?ev=hdr_xprf" target="_blank" title="ResearchGate">
-                <i class="fab fa-researchgate"></i>
-            </a>
-            <a href="https://bsky.app/profile/cerezer.bsky.social" target="_blank" title="Bluesky">
-                <i class="fab fa-twitter"></i>
-            </a>
-        </div>
+        <!-- Social Icons and Footer Links Below Profile -->
+        <div class="social-footer">
+            <div class="social-icons">
+                <a href="https://scholar.google.com/citations?user=wUiHfVoAAAAJ&hl=pt-BR" target="_blank" title="Google Scholar">
+                    <i class="fab fa-google"></i>
+                </a>
+                <a href="https://www.researchgate.net/profile/Felipe-Cerezer?ev=hdr_xprf" target="_blank" title="ResearchGate">
+                    <i class="fab fa-researchgate"></i>
+                </a>
+                <a href="https://bsky.app/profile/cerezer.bsky.social" target="_blank" title="Bluesky">
+                    <i class="fab fa-twitter"></i>
+                </a>
+            </div>
 
-        <!-- Footer Links -->
-        <div class="footer-links">
-            <a href="mailto:cerezerfelipe@gmail.com" target="_blank" title="Email me">Feel free to reach out via email</a><br>
-            <a href="cv.pdf" target="_blank" title="Download CV">Download my CV (PDF)</a>
+            <!-- Footer Links -->
+            <div class="footer-links">
+                <a href="mailto:cerezerfelipe@gmail.com" target="_blank" title="Email me">Feel free to reach out via email</a><br>
+                <a href="cv.pdf" target="_blank" title="Download CV">Download my CV (PDF)</a>
+            </div>
         </div>
     </section>
 
