--- a/index.html
+++ b/index.html
@@ -1,65 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="description" content="Felipe O. Cerezer - Researcher in Macroecology, Evolutionary Biology & Biogeography" />
-  <title>Felipe O. Cerezer - Home</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"/>
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Felipe O. Cerezer - Home</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <header>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="projects.html">Projects</a>
-      <a href="about.html">About</a>
-      <a href="publications.html">Publications</a>
-    </nav>
-  </header>
+    <!-- Header Navigation -->
+    <header>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="projects.html">Projects</a>
+            <a href="about.html">About</a>
+            <a href="publications.html">Publications</a>
+        </nav>
+    </header>
 
-  <!-- Two-column Layout -->
-  <section class="container">
-    <!-- Left Column -->
-    <div class="left-column">
-      <img src="profile_pic.jpeg" alt="Felipe O. Cerezer" class="profile-img" />
-      <h1 class="name">Felipe O. Cerezer</h1>
+    <!-- Main Content Section -->
+    <section class="profile-section">
+        <!-- Left Column: Photo -->
+        <div class="left-column">
+            <img src="profile_pic.jpeg" alt="Felipe O. Cerezer" class="profile-img">
+        </div>
 
-      <div class="social-icons">
-        <a href="https://scholar.google.com/citations?user=wUiHfVoAAAAJ&hl=pt-BR" target="_blank" title="Google Scholar">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/Google_Scholar_Logo.svg/1200px-Google_Scholar_Logo.svg.png" alt="Google Scholar" />
-        </a>
-        <a href="https://www.researchgate.net/profile/Felipe-Cerezer?ev=hdr_xprf" target="_blank" title="ResearchGate">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/a/a6/ResearchGate_logo_2016.svg" alt="ResearchGate" />
-        </a>
-        <a href="https://bsky.app/profile/cerezer.bsky.social" target="_blank" title="Bluesky">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/9/9b/Bluesky_logo.svg" alt="Bluesky" />
-        </a>
-      </div>
-    </div>
+        <!-- Right Column: Text Content -->
+        <div class="right-column">
+            <div class="profile-name">Felipe O. Cerezer</div>
 
-    <!-- Vertical Separator -->
-    <div class="vertical-line"></div>
+            <div class="social-icons">
+                <a href="https://scholar.google.com/citations?user=wUiHfVoAAAAJ&hl=pt-BR" target="_blank" title="Google Scholar">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/Google_Scholar_Logo.svg/1200px-Google_Scholar_Logo.svg.png" alt="Google Scholar">
+                </a>
+                <a href="https://www.researchgate.net/profile/Felipe-Cerezer?ev=hdr_xprf" target="_blank" title="ResearchGate">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a6/ResearchGate_logo_2016.svg" alt="ResearchGate">
+                </a>
+                <a href="https://bsky.app/profile/cerezer.bsky.social" target="_blank" title="Bluesky">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/9/9b/Bluesky_logo.svg" alt="Bluesky">
+                </a>
+            </div>
 
-    <!-- Right Column -->
-    <div class="right-column">
-      <h3>Researcher in Macroecology, Evolutionary Biology & Biogeography</h3>
+            <h3>Researcher in Macroecology, Evolutionary Biology & Biogeography</h3>
 
-      <p>
-        Welcome!<br><br>
-        I am a Brazilian scientist passionate about understanding the diversity of life on Earth.
-        My research in macroecology, evolutionary biology, and biogeography uncovers the amazing patterns and
-        processes that sculpt biodiversity among clades, regions, and time. Join me as I explore how life evolves,
-        adapts, and thrives in our ever-changing world!
-      </p>
+            <p>
+                Welcome!<br><br>
+                I am a Brazilian scientist passionate about understanding the diversity of life on Earth. 
+                My research in macroecology, evolutionary biology, and biogeography uncovers the amazing patterns 
+                and processes that sculpt biodiversity among clades, regions, and time. 
+                Join me as I explore how life evolves, adapts, and thrives in our ever-changing world!
+            </p>
 
-      <div class="footer-links">
-        <a href="mailto:cerezerfelipe@gmail.com" target="_blank" title="Email me">Feel free to reach out via email</a><br>
-        <a href="cv.pdf" target="_blank" title="Download CV">Download my CV (PDF)</a>
-      </div>
-    </div>
-  </section>
+            <div class="footer-links">
+                <a href="mailto:cerezerfelipe@gmail.com" target="_blank" title="Email me">Feel free to reach out via email</a>
+                <a href="cv.pdf" target="_blank" title="Download CV">Download my CV (PDF)</a>
+            </div>
+        </div>
+    </section>
 
 </body>
 </html>
