--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
 
             <div class="social-icons">
                 <a href="https://scholar.google.com/citations?user=wUiHfVoAAAAJ&hl=pt-BR" target="_blank" title="Google Scholar">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/Google_Scholar_Logo.svg/1200px-Google_Scholar_Logo.svg.png" alt="Google Scholar">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Google_Scholar_logo.svg" alt="Google Scholar">
                 </a>
                 <a href="https://www.researchgate.net/profile/Felipe-Cerezer?ev=hdr_xprf" target="_blank" title="ResearchGate">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a6/ResearchGate_logo_2016.svg" alt="ResearchGate">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/ResearchGate_icon_SVG.svg" alt="ResearchGate">
                 </a>
                 <a href="https://bsky.app/profile/cerezer.bsky.social" target="_blank" title="Bluesky">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/9/9b/Bluesky_logo.svg" alt="Bluesky">
                 </a>
             </div>
 
-            <h3>Researcher in Macroecology, Evolutionary Biology & Biogeography</h3>
+            <h3>Macroecology, Evolutionary Biology & Biogeography</h3>
 
             <p>
                 Welcome!<br><br>
@@ -53,8 +53,8 @@
             </p>
 
             <div class="footer-links">
-                <a href="mailto:cerezerfelipe@gmail.com" target="_blank" title="Email me">Feel free to reach out via email</a>
-                <a href="cv.pdf" target="_blank" title="Download CV">Download my CV (PDF)</a>
+                <p>If you're interested in learning more or collaborating, feel free to reach out.</p>
+                <a href="cv.pdf" target="_blank" title="Download CV">For more details, check out my CV (PDF)</a>
             </div>
         </div>
     </section>
