--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <header>
         <nav>
             <a href="index.html">Home</a>
-            <a href="projects.html">Projects</a>
-            <a href="about.html">About</a>
-            <a href="publications.html">Publications</a>
+            <a href="about.html">About</a>  <!-- Reordered tab -->
+            <a href="projects.html">Projects</a>  <!-- Reordered tab -->
+            <a href="publications.html">Publications</a>  <!-- Reordered tab -->
         </nav>
     </header>
 
