--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <header>
         <nav>
             <a href="index.html">Home</a>
-            <a href="about.html">About</a>  <!-- Reordered tab -->
-            <a href="projects.html">Projects</a>  <!-- Reordered tab -->
-            <a href="publications.html">Publications</a>  <!-- Reordered tab -->
+            <a href="projects.html">Projects</a>
+            <a href="about.html">About</a>
+            <a href="publications.html">Publications</a>
         </nav>
     </header>
 
@@ -52,6 +52,7 @@
                 Join me as I explore how life evolves, adapts, and thrives in our ever-changing world!
             </p>
 
+            <!-- Smaller text for additional webpages -->
             <div class="footer-links">
                 <p>If you're interested in learning more or collaborating, feel free to reach out.</p>
                 <a href="cv.pdf" target="_blank" title="Download CV">For more details, check out my CV (PDF)</a>
