--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <div class="right-column">
             <div class="profile-name">Felipe O. Cerezer</div>
 
+            <!-- Social Icons moved before the welcome text -->
             <div class="social-icons">
                 <a href="https://scholar.google.com/citations?user=wUiHfVoAAAAJ&hl=pt-BR" target="_blank" title="Google Scholar">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Google_Scholar_logo.svg" alt="Google Scholar">
