--- a/index.html
+++ b/index.html
@@ -30,19 +30,7 @@
         <div class="right-column">
             <div class="profile-name">Felipe O. Cerezer</div>
 
-            <!-- Social Icons moved before the welcome text -->
-            <div class="social-icons">
-                <a href="https://scholar.google.com/citations?user=wUiHfVoAAAAJ&hl=pt-BR" target="_blank" title="Google Scholar">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Google_Scholar_logo.svg" alt="Google Scholar">
-                </a>
-                <a href="https://www.researchgate.net/profile/Felipe-Cerezer?ev=hdr_xprf" target="_blank" title="ResearchGate">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/ResearchGate_icon_SVG.svg" alt="ResearchGate">
-                </a>
-                <a href="https://bsky.app/profile/cerezer.bsky.social" target="_blank" title="Bluesky">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/9/9b/Bluesky_logo.svg" alt="Bluesky">
-                </a>
-            </div>
-
+            <!-- Increased font size for the header and paragraph text -->
             <h3>Macroecology, Evolutionary Biology & Biogeography</h3>
 
             <p>
@@ -57,6 +45,19 @@
             <div class="footer-links">
                 <p>If you're interested in learning more or collaborating, feel free to reach out.</p>
                 <a href="cv.pdf" target="_blank" title="Download CV">For more details, check out my CV (PDF)</a>
+            </div>
+
+            <!-- Moved Social Icons below the CV link -->
+            <div class="social-icons">
+                <a href="https://scholar.google.com/citations?user=wUiHfVoAAAAJ&hl=pt-BR" target="_blank" title="Google Scholar">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Google_Scholar_logo.svg" alt="Google Scholar">
+                </a>
+                <a href="https://www.researchgate.net/profile/Felipe-Cerezer?ev=hdr_xprf" target="_blank" title="ResearchGate">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/ResearchGate_icon_SVG.svg" alt="ResearchGate">
+                </a>
+                <a href="https://bsky.app/profile/cerezer.bsky.social" target="_blank" title="Bluesky">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/9/9b/Bluesky_logo.svg" alt="Bluesky">
+                </a>
             </div>
         </div>
     </section>
