--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <a href="cv.pdf" target="_blank" title="Download CV">For more details, check out my CV (PDF)</a>
             </div>
 
-            <!-- Moved Social Icons below the CV link -->
+            <!-- Moved Social Icons below the CV link with icons for Google Scholar and Bluesky -->
             <div class="social-icons">
                 <a href="https://scholar.google.com/citations?user=wUiHfVoAAAAJ&hl=pt-BR" target="_blank" title="Google Scholar">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Google_Scholar_logo.svg" alt="Google Scholar">
