--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Felipe O. Cerezer - Home</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
@@ -19,48 +19,65 @@
         </nav>
     </header>
 
-    <!-- Main Content Section -->
-    <section class="profile-section">
-        <!-- Left Column: Photo -->
-        <div class="left-column">
-            <img src="profile_pic.jpeg" alt="Felipe O. Cerezer" class="profile-img">
-        </div>
-
-        <!-- Right Column: Text Content -->
-        <div class="right-column">
-            <div class="profile-name">Felipe O. Cerezer</div>
-
-            <!-- Increased font size for the header and paragraph text -->
-            <h3>Macroecology, Evolutionary Biology & Biogeography</h3>
-
-            <p>
-                Welcome!<br><br>
-                I am a Brazilian scientist passionate about understanding the diversity of life on Earth. 
-                My research in macroecology, evolutionary biology, and biogeography uncovers the amazing patterns 
-                and processes that sculpt biodiversity among clades, regions, and time. 
-                Join me as I explore how life evolves, adapts, and thrives in our ever-changing world!
-            </p>
-
-            <!-- Smaller text for additional webpages -->
-            <div class="footer-links">
-                <p>If you're interested in learning more or collaborating, feel free to reach out.</p>
-                <a href="cv.pdf" target="_blank" title="Download CV">For more details, check out my CV (PDF)</a>
+    <!-- Main Content -->
+    <main>
+        <section class="profile-section">
+            <!-- Left Column: Photo -->
+            <div class="left-column">
+                <img src="profile_pic.jpeg" alt="Felipe O. Cerezer portrait" class="profile-img" />
             </div>
 
-            <!-- Moved Social Icons below the CV link with icons for Google Scholar and Bluesky -->
-            <div class="social-icons">
-                <a href="https://scholar.google.com/citations?user=wUiHfVoAAAAJ&hl=pt-BR" target="_blank" title="Google Scholar">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Google_Scholar_logo.svg" alt="Google Scholar">
-                </a>
-                <a href="https://www.researchgate.net/profile/Felipe-Cerezer?ev=hdr_xprf" target="_blank" title="ResearchGate">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/ResearchGate_icon_SVG.svg" alt="ResearchGate">
-                </a>
-                <a href="https://bsky.app/profile/cerezer.bsky.social" target="_blank" title="Bluesky">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/9/9b/Bluesky_logo.svg" alt="Bluesky">
-                </a>
+            <!-- Right Column: Text Content -->
+            <div class="right-column">
+                <h1 class="profile-name">Felipe O. Cerezer</h1>
+                <h3>Macroecology, Evolutionary Biology & Biogeography</h3>
+
+                <p>
+                    Welcome!<br><br>
+                    I am a Brazilian scientist passionate about understanding the diversity of life on Earth. 
+                    My research in macroecology, evolutionary biology, and biogeography uncovers the amazing patterns 
+                    and processes that sculpt biodiversity among clades, regions, and time. 
+                    Join me as I explore how life evolves, adapts, and thrives in our ever-changing world!
+                </p>
+
+                <!-- Contact and CV -->
+                <div class="footer-links">
+                    <p>If you're interested in learning more or collaborating, feel free to reach out.</p>
+                    <a href="cv.pdf" target="_blank" title="Download CV" rel="noopener noreferrer">
+                        For more details, check out my CV (PDF)
+                    </a>
+                </div>
+
+                <!-- Social Icons -->
+                <footer class="social-icons">
+                    <a href="https://scholar.google.com/citations?user=wUiHfVoAAAAJ&hl=pt-BR" 
+                       target="_blank" 
+                       rel="noopener noreferrer" 
+                       title="Google Scholar">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Google_Scholar_logo.svg" 
+                             alt="Google Scholar profile icon" 
+                             width="32" height="32" />
+                    </a>
+                    <a href="https://www.researchgate.net/profile/Felipe-Cerezer?ev=hdr_xprf" 
+                       target="_blank" 
+                       rel="noopener noreferrer" 
+                       title="ResearchGate">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/ResearchGate_icon_SVG.svg" 
+                             alt="ResearchGate profile icon" 
+                             width="32" height="32" />
+                    </a>
+                    <a href="https://bsky.app/profile/cerezer.bsky.social" 
+                       target="_blank" 
+                       rel="noopener noreferrer" 
+                       title="Bluesky">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/9/9b/Bluesky_logo.svg" 
+                             alt="Bluesky profile icon" 
+                             width="32" height="32" />
+                    </a>
+                </footer>
             </div>
-        </div>
-    </section>
+        </section>
+    </main>
 
 </body>
 </html>
