--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/ResearchGate_icon_SVG.svg" alt="ResearchGate">
                 </a>
                 <a href="https://bsky.app/profile/cerezer.bsky.social" target="_blank" title="Bluesky">
-                    <img src="https://commons.wikimedia.org/wiki/File:Bluesky_Logo.svg" alt="Bluesky">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/f/fc/Bluesky_butterfly-logo.svg" alt="Bluesky">
                 </a>
             </div>
         </div>
