--- a/index.html
+++ b/index.html
@@ -45,16 +45,16 @@
                 <a href="cv.pdf" target="_blank" title="Download CV">For more details, check out my CV (PDF)</a>
             </div>
 
-            <!-- Social Icons -->
+            <!-- Social Icons Section -->
             <div class="social-icons">
                 <a href="https://scholar.google.com/citations?user=wUiHfVoAAAAJ&hl=pt-BR" target="_blank" title="Google Scholar">
-                    <img src="https://commons.wikimedia.org/wiki/File:Google_Scholar_blue_logo.png" alt="Google Scholar">
+                    <img src="google.svg" alt="Google Scholar">
                 </a>
                 <a href="https://www.researchgate.net/profile/Felipe-Cerezer?ev=hdr_xprf" target="_blank" title="ResearchGate">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/ResearchGate_icon_SVG.svg" alt="ResearchGate">
                 </a>
                 <a href="https://bsky.app/profile/cerezer.bsky.social" target="_blank" title="Bluesky">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/f/fc/Bluesky_butterfly-logo.svg" alt="Bluesky">
+                    <img src="bluesky.svg" alt="Bluesky">
                 </a>
             </div>
         </div>
