--- a/index.html
+++ b/index.html
@@ -24,6 +24,19 @@
         <!-- Left Column: Photo -->
         <div class="left-column">
             <img src="profile_pic.jpeg" alt="Felipe O. Cerezer" class="profile-img">
+            
+            <!-- Social Icons below the profile picture -->
+            <div class="social-icons">
+                <a href="https://scholar.google.com/citations?user=wUiHfVoAAAAJ&hl=pt-BR" target="_blank" title="Google Scholar">
+                    <img src="google.svg" alt="Google Scholar">
+                </a>
+                <a href="https://www.researchgate.net/profile/Felipe-Cerezer?ev=hdr_xprf" target="_blank" title="ResearchGate">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/ResearchGate_icon_SVG.svg" alt="ResearchGate">
+                </a>
+                <a href="https://bsky.app/profile/cerezer.bsky.social" target="_blank" title="Bluesky">
+                    <img src="bluesky.svg" alt="Bluesky">
+                </a>
+            </div>
         </div>
 
         <!-- Right Column: Text Content -->
@@ -43,19 +56,6 @@
             <div class="footer-links">
                 <p>If you're interested in learning more or collaborating, feel free to reach out.</p>
                 <a href="cv.pdf" target="_blank" title="Download CV">For more details, check out my CV (PDF)</a>
-            </div>
-
-            <!-- Social Icons Section -->
-            <div class="social-icons">
-                <a href="https://scholar.google.com/citations?user=wUiHfVoAAAAJ&hl=pt-BR" target="_blank" title="Google Scholar">
-                    <img src="google.svg" alt="Google Scholar">
-                </a>
-                <a href="https://www.researchgate.net/profile/Felipe-Cerezer?ev=hdr_xprf" target="_blank" title="ResearchGate">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/ResearchGate_icon_SVG.svg" alt="ResearchGate">
-                </a>
-                <a href="https://bsky.app/profile/cerezer.bsky.social" target="_blank" title="Bluesky">
-                    <img src="bluesky.svg" alt="Bluesky">
-                </a>
             </div>
         </div>
     </section>
