--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="projects.html">Projects</a>
-            <a href="about.html">About</a>
             <a href="publications.html">Publications</a>
+            <a href="about.html">About</a>
         </nav>
     </header>
 
@@ -24,25 +24,13 @@
         <!-- Left Column: Photo -->
         <div class="left-column">
             <img src="profile_pic.jpeg" alt="Felipe O. Cerezer" class="profile-img">
-            
-            <!-- Social Icons below the profile picture -->
-            <div class="social-icons">
-                <a href="https://scholar.google.com/citations?user=wUiHfVoAAAAJ&hl=pt-BR" target="_blank" title="Google Scholar">
-                    <img src="google.svg" alt="Google Scholar">
-                </a>
-                <a href="https://www.researchgate.net/profile/Felipe-Cerezer?ev=hdr_xprf" target="_blank" title="ResearchGate">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/ResearchGate_icon_SVG.svg" alt="ResearchGate">
-                </a>
-                <a href="https://bsky.app/profile/cerezer.bsky.social" target="_blank" title="Bluesky">
-                    <img src="bluesky.svg" alt="Bluesky">
-                </a>
-            </div>
         </div>
 
         <!-- Right Column: Text Content -->
         <div class="right-column">
             <div class="profile-name">Felipe O. Cerezer</div>
 
+            <!-- Increased font size for the header and paragraph text -->
             <h3>Macroecology, Evolutionary Biology & Biogeography</h3>
 
             <p>
@@ -53,9 +41,23 @@
                 Join me as I explore how life evolves, adapts, and thrives in our ever-changing world!
             </p>
 
+            <!-- Smaller text for additional webpages -->
             <div class="footer-links">
                 <p>If you're interested in learning more or collaborating, feel free to reach out.</p>
                 <a href="cv.pdf" target="_blank" title="Download CV">For more details, check out my CV (PDF)</a>
+            </div>
+
+            <!-- Social Icons -->
+            <div class="social-icons">
+                <a href="https://scholar.google.com/citations?user=wUiHfVoAAAAJ&hl=pt-BR" target="_blank" title="Google Scholar">
+                    <img src="google.svg" alt="Google Scholar">
+                </a>
+                <a href="https://www.researchgate.net/profile/Felipe-Cerezer?ev=hdr_xprf" target="_blank" title="ResearchGate">
+                    <img src="researchgate.svg" alt="ResearchGate">
+                </a>
+                <a href="https://upload.wikimedia.org/wikipedia/commons/f/fc/Bluesky_butterfly-logo.svg" target="_blank" title="Bluesky">
+                    <img src="bluesky.svg" alt="Bluesky">
+                </a>
             </div>
         </div>
     </section>
