--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <!-- Smaller text for additional webpages -->
             <div class="footer-links">
                 <p>If you're interested in learning more or collaborating, feel free to reach out.</p>
-                <a href="CV_Felipe_Cerezer.pdf" target="_blank" title="Download CV">For more details, check out my CV (PDF)</a>
+                <a href="cv.pdf" target="_blank" title="Download CV">For more details, check out my CV (PDF)</a>
             </div>
 
             <!-- Social Icons -->
